@@ -3,7 +3,8 @@ SUBDIRS = src src/tools
 EXTRA_DIST = data/autocorrect/fi_FI.xml data/autocorrect/autocorrect.dtd \
     python/libvoikko.py python/libvoikkotests.py \
     python/ExtendedMorphologyTest.py \
-    doc/oikoluku-korjausehdotukset.txt
+    doc/oikoluku-korjausehdotukset.txt \
+    autogen.sh
 
 ACLOCAL_AMFLAGS = -I m4
 
